<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/linearLayoutid"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <EditText
                android:id="@+id/edtNumeroid"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/digite_um_numero"
                android:inputType="number"
                android:padding="5dp"
                tools:targetApi="o" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnResultado"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:onClick="onClickButton"
            android:text="@string/mostrar" />

        <TextView
            android:id="@+id/txtResultadoid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:padding="5dp"
            android:text="@string/textview" />

        <CheckBox
            android:id="@+id/fahrenheit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="fahrenheitCheckBox"
            android:padding="5dp"
            android:text="@string/fahrenheit"
            tools:text="@string/fahrenheit" />

        <CheckBox
            android:id="@+id/kelvin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="kelvinCheckBox"
            android:padding="5dp"
            android:text="@string/kelvin"
            tools:text="@string/kelvin" />

        <CheckBox
            android:id="@+id/celsius"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:onClick="celsiusCheckBox"
            android:padding="5dp"
            android:text="@string/celsius"
            tools:text="@string/celsius" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>